# MebliXDesktop

./: .gitignore  CMakeLists.txt  README.md
src/core/: main.cpp
src/core/geometry/: Panel.hpp
src/core/ipc/: IpcServer.hpp
src/core/network/: SyncClient.hpp
src/core/storage/: EditAction.hpp  ProjectManager.hpp
src/ui/: index.html  package-lock.json  package.json  vite.config.js
src/ui/src/: App.jsx  index.css
src/ui/src/components/atoms/: Button.jsx  StatusIndicator.jsx
src/ui/src/components/molecules/: ParameterSlider.jsx  ToolbarItem.jsx
src/ui/src/components/organisms/: AdvancedToolbar.jsx  AuthModal.jsx  CadViewport.jsx  FittingManager.jsx  SaveModal.jsx  StatusPanel.jsx
src/ui/src/components/pages/: DesktopPage.jsx
src/ui/src/components/templates/: DesktopLayout.jsx
